// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 1`] = `
<form
  onSubmit={[Function]}
>
  <Field
    component={[Function]}
    disabled={true}
    label="Username"
    name="username"
    validate={[Function]}
  />
  <Field
    autoComplete="new-password"
    autoFocus={true}
    component={[Function]}
    data-lpignore={true}
    disabled={false}
    helpText="Passwords must be at least 8 characters long."
    label="Password"
    name="password"
    type="password"
    validate={
      Array [
        [Function],
        [Function],
      ]
    }
  />
  <p>
    <small>
      By joining, you agree to SparkPost's 
      <UnstyledLink
        target="_blank"
        to="https://www.sparkpost.com/policies/tou/"
      >
        Terms of Use
      </UnstyledLink>
    </small>
  </p>
  <Button
    disabled={false}
    primary={true}
    size="default"
    submit={true}
  >
    Confirm
  </Button>
</form>
`;

exports[`submitting 1`] = `
<form
  onSubmit={[Function]}
>
  <Field
    component={[Function]}
    disabled={true}
    label="Username"
    name="username"
    validate={[Function]}
  />
  <Field
    autoComplete="new-password"
    autoFocus={true}
    component={[Function]}
    data-lpignore={true}
    disabled={true}
    helpText="Passwords must be at least 8 characters long."
    label="Password"
    name="password"
    type="password"
    validate={
      Array [
        [Function],
        [Function],
      ]
    }
  />
  <p>
    <small>
      By joining, you agree to SparkPost's 
      <UnstyledLink
        target="_blank"
        to="https://www.sparkpost.com/policies/tou/"
      >
        Terms of Use
      </UnstyledLink>
    </small>
  </p>
  <Button
    disabled={true}
    primary={true}
    size="default"
    submit={true}
  >
    Loading
  </Button>
</form>
`;
